; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_scoop.c_check_scoop_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_scoop.c_check_scoop_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scoop_dev = type { i64 }

@SCOOP_MCR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scoop_dev*)* @check_scoop_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_scoop_reg(%struct.scoop_dev* %0) #0 {
  %2 = alloca %struct.scoop_dev*, align 8
  %3 = alloca i16, align 2
  store %struct.scoop_dev* %0, %struct.scoop_dev** %2, align 8
  %4 = load %struct.scoop_dev*, %struct.scoop_dev** %2, align 8
  %5 = getelementptr inbounds %struct.scoop_dev, %struct.scoop_dev* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SCOOP_MCR, align 8
  %8 = add nsw i64 %6, %7
  %9 = call zeroext i16 @ioread16(i64 %8)
  store i16 %9, i16* %3, align 2
  %10 = load i16, i16* %3, align 2
  %11 = zext i16 %10 to i32
  %12 = and i32 %11, 256
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load %struct.scoop_dev*, %struct.scoop_dev** %2, align 8
  %16 = getelementptr inbounds %struct.scoop_dev, %struct.scoop_dev* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @SCOOP_MCR, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @iowrite16(i32 257, i64 %19)
  br label %21

21:                                               ; preds = %14, %1
  ret void
}

declare dso_local zeroext i16 @ioread16(i64) #1

declare dso_local i32 @iowrite16(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
